[package]
name = "crate-test"
version = "0.1.0"
authors = ["Richard Hozák <r.hozak@seznam.cz>"]
description = "test library"
homepage = "https://www.google.com"
keywords = ["test"]
categories = ["rendering::graphics-api", "games", "gui"]
license = "MIT/Zlib"

[dependencies]
nanovg-sys = { path = "nanovg-sys", version = "0.1" }

[features]
gl2 = ["nanovg-sys/gl2"]
gl3 = ["nanovg-sys/gl3"]


